# Redis-Lite

./: .gitignore  CMakeLists.txt  README.md
examples/: example_usage.cpp
include/: eviction_policy.h  kv_store.h
src/: kv_store.cpp
tests/: basic_tests.cpp  stress_tests.cpp
